--- a/dada/extras/documentation/pod_source/upgrade_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/upgrade_dada_mail.pod
@@ -27,13 +27,14 @@ A, "Basic" installation changes the configuration variables right in the, C<dada
 
 =back
 
-You'll know if you have a, "Basic" installation of Dada Mail, if your C<$FILES> variable is  filled out to a directory that actually exists and is that directory holds  files/directories that have something to do with Dada Mail. 
+You'll know if you have a, "Basic" installation of Dada Mail, if the,
+ C<$FILES> variable in the, C<dada/DADA/Config.pm> file is  filled out to a directory that I<actually> exists and that directory holds files/directories that have something to do with Dada Mail. 
 
-If you are running a "Basic" Installation of Dada Mail, we really suggest upgrading by taking note of where your C<$FILES> variable is located and importing the old information after a clean installation.
+If you are running a "Basic" Installation of Dada Mail, we really suggest upgrading by taking note of where your C<$FILES> variable is located and importing the old information I<after> a clean installation.
 
 =head4 More Information
 
-L<http://dadamailproject.com/support/documentation/FAQ-basic_2_contemporary_installation.pod.html>
+L<http://dadamailproject.com/support/documentation/basic_two_contemporary_installation.pod.html>
 
 =head3 Contemporary Installation 
 
@@ -54,11 +55,15 @@ You'll know if you have a Contemporary Installation, if those same four variable
 =back
 
 Are still in their default values and your Dada Mail seems to be 
-functioning fine. This probably means that your config variables are being read from an outside config file. For upgrade purposes, note what the, C<$PROGRAM_CONFIG_FILE_DIR> is set to.It's OK if it's only set to, C<auto>. 
+functioning fine. This probably means that your config variables are being read from an outside config file. 
 
-=head1 Step #1 Move The Old Program Out of the Way
+For upgrade purposes, note what the, C<$PROGRAM_CONFIG_FILE_DIR> in the, C<dada/DADA/Config.pm> is set to. It's OK if it's only set to, C<auto>. 
 
-Dada Mail, "The Program" is in the directory called, C<dada> that's most likely located in your cgi-bin, it has a directory structure like this: 
+=head1 Step #1 Move The Old Program Files Out of the Way
+
+Dada Mail, "The Program" is the collection of files and directories that are in the directory called, C<dada>. 
+
+This directory is most likely located in your cgi-bin. It's directory structure like this: 
 
  cgi-bin (directory)
     - dada (directory, _lower_ case)
@@ -68,7 +73,7 @@ Dada Mail, "The Program" is in the directory called, C<dada> that's most likely 
             - Config.pm
             - etc, etc, etc
 
-This is the actual program of Dada Mail. When upgrading, you basically replace these files, with the new version of Dada Mail, and configure it the same - if you understand that, that's all there is to upgrading.
+This is Dada Mail, "The Program"
 
 Simply rename this directory on the server from: 
 
@@ -78,13 +83,24 @@ to something like:
 
  dada-old_ver
 
-This move is more important than you might think - it keeps a backup that is known to work handy, it also makes sure that we're not overwriting the old files, with new files. It works like insurance: the new version doesn't work for some reason?  Rename the new copy something like, "dada-new_but_busted" and move the old version back to just, "dada". 
+Moving the directory: 
+
+=over 
+
+=item * Keeps a backup that is known to work 
+
+=item * Makes sure we don't overwrite the old version of the program with the new version
+
+=item * Makes sure we don't mix up the old version of Dada Mail with the new version of Dada Mail 
+
+=back
+
 
 =head2 Step #3 Install the new Dada Mail
 
-From then on, you can just follow the instructions for an installation of Dada Mail: 
+Now, you can just follow the instructions for an installation of Dada Mail: 
 
-L<http://dadamailproject.com/support/documentation-4_2_0-rc1/install_dada_mail.pod.html>
+L<http://dadamailproject.com/support/documentation-4_2_0/install_dada_mail.pod.html>
 
 =over
 
@@ -100,10 +116,10 @@ my C<.dada_files> directory is:
 
 =item * If your last installation was a Basic Installation, install Dada Mail as if it's a brand new installation and then move your old list/settings/archives/etc files over: 
 
-L<http://dadamailproject.com/support/documentation/FAQ-basic_2_contemporary_installation.pod.html>
+L<http://dadamailproject.com/support/documentation/basic_two_contemporary_installation.pod.html>
 
 =back
 
 =head2 Changelog 
 
-It's a very very good idea to look at the changelog and not B<any> incompatibilities> between versions. It's possible that incompatibilities could break your installation, when you upgrade. 
+It's a B<I<very very>> good idea to look at the changelog and not B<any> incompatibilities> between versions. It's possible that incompatibilities could break your installation, when you upgrade. 
