--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -27,7 +27,7 @@ found on how to use it, by invoking the script with the, C<--help> flag,
 =head4 Installation Terminology Changes
 
 The, "Advanced" Installation of Dada Mail is just known as a, "Manual" installation
-of Dada Mail. We only recommend masochists to manually install Dada Mail. 
+of Dada Mail.
 
 The Dada Mail Installer will install Dada Mail the same way as one would install 
 Dada Mail manually. Directions may be found here: 
@@ -47,8 +47,36 @@ L<http://example.com/cgi-bin/dada/mail.cgi?f=setup_info>
 
 has been completely rewritten. In light of the Installer, it does not attempt to help 
 configure Dada Mail for you, but will tell you what type of installation it recognizes, 
- will present to you the entire contents of your, C<dada/DADA/Config.pm> file, your C<.dada_config> 
-file  and will show you how all config variables are being interpreted. 
+ will present to you the entire contents of your, C<dada/DADA/Config.pm> file as well as your C<.dada_config> 
+file and will show you how all config variables are being interpreted. 
+
+=head3 $ADMIN_MENU Changes 
+
+The $ADMIN_MENU variable has been changed to add the, "Dada Mail Setup Info" menu item. It looks like this: 
+
+	{-Title      => '<!-- tmpl_var PROGRAM_NAME --> Setup Info',
+	 -Title_URL  => "$S_PROGRAM_URL?f=setup_info",
+	 -Function   => 'setup_info',
+	 -Activated  => 1,
+	},
+
+=head3 MySQL 4-specific schema REMOVED
+
+The MySQL schema shipped for Dada Mail, specifically for v4 of MySQL has been removed. 
+The reason for the schema was more because of UTF-8 incompatibilities, rather 
+than problems with this version of MySQL v4. 
+
+
+=head2 Bug Fixes
+
+=head3 Profile Email Addresses aren't normalized for case sensitivity
+
+http://github.com/justingit/dada-mail/issues#issue/60
+
+=head3 PlainText Backend - subscribed addresses with a, ' (single quote) will disrupt subscriptions
+
+http://github.com/justingit/dada-mail/issues/issue/61
+
 
 =head1 4.1.0
 
