--- a/dada/extras/documentation/pod_source/upgrade_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/upgrade_dada_mail.pod
@@ -123,3 +123,10 @@ L<http://dadamailproject.com/support/documentation/basic_two_contemporary_instal
 =head2 Changelog 
 
 It's a B<I<very very>> good idea to look at the changelog and not B<any> incompatibilities> between versions. It's possible that incompatibilities could break your installation, when you upgrade. 
+
+=head1 Screencasts
+
+The following screencast walks through how to upgrade Dada Mail. The original Dada Mail was installed using the Dada Mail installer: 
+
+=for html <p><object width="960" height="745"><param name="movie" value="http://www.youtube.com/v/mr4veygFD8U?fs=1&amp;hl=en_US&amp;hd=1&amp;color1=0x2b405b&amp;color2=0x6b8ab6"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/mr4veygFD8U?fs=1&amp;hl=en_US&amp;hd=1&amp;color1=0x2b405b&amp;color2=0x6b8ab6" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="960" height="745"></embed></object></p>
+
