--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -11,23 +11,26 @@ L<http://dadamailproject.com/support/documentation/manually_install_dada_mail.po
 
 =head1 Step #1: Download Dada Mail
 
-Here's the direct download to Dada Mail v4.3.0: 
+Here's the direct download to Dada Mail v4.3.0 Beta 2: 
 
-L<https://github.com/downloads/justingit/dada-mail/dada-4_3_0.tar.gz>
+L<https://github.com/downloads/justingit/dada-mail/dada-4_3_0-beta2.tar.gz>
 
+=cut
 
-(If you have Pro Dada, you can download v4.3.0 of Pro Dada here:)
+	(If you have Pro Dada, you can download v4.3.0 of Pro Dada here:)
 
-L<http://dadamailproject.com/pro_dada/index.cgi?rm=download_file&filename=pro_dada-4_3_0.tar.gz>
+	L<http://dadamailproject.com/pro_dada/index.cgi?rm=download_file&filename=pro_dada-4_3_0.tar.gz>
 
-Save the distribution to your Desktop Computer (you will B<not> have to uncompress the distribution) and then upload the, tar.gz file to your hosting account's I<cgi-bin>. 
+	Save the distribution to your Desktop Computer (you will B<not> have to uncompress the distribution) and then upload the, tar.gz file to your hosting account's I<cgi-bin>. 
+
+=pod 
 
 =head1 Step #2 Upload the, "uncompress_dada.cgi" script to your cgi-bin
 
 Download the, C<uncompress_dada.cgi> script from here: 
 
 CHANGE
-=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_3_0-beta1-2010_11_16/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/739af18c9377d777cbc1bb9b3836a3622cab5b03/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
 
 and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> - right alongside the tar.gz file you just put up. 
 
